Alteracao do codigo

--- a/conversa.html
+++ b/conversa.html
@@ -2,7 +2,24 @@
 <html>
 <head>
 	<title>Conversa - Teste</title>
-	<style type="text/css"></style>
+	<style>
+		body	{
+			color: blue; font-weight: :bold font-size: 18px; background: #green; background-image: url(""); background-repeat: repeat-y;
+		}
+		span{
+			color: #711;
+
+		}
+		::-webkit-input-placeholder {
+			color: #711;
+		}
+		#main div {
+			margin: 10px;
+		}
+		#input {
+			border: 0; background: 
+		}
+	</style>
 </head>
 <body>
 
