--- a/conversa.html
+++ b/conversa.html
@@ -17,7 +17,7 @@
 			margin: 10px;
 		}
 		#input {
-			border: 0; background: 
+			border: 0; background: #EBE547; padding: 5px; border: 1px solid #421;
 		}
 	</style>
 </head>
