--- a/conversa.html
+++ b/conversa.html
@@ -22,6 +22,11 @@
 	</style>
 </head>
 <body>
+	<div id="main">
+		<div>Usuario: <span id="user"></span></div>
+		<div>Chatbot: <span id="chatbot"></span></div>
+		<div><input id="input" type="text" placeholder="Diga alguma coisa..." autocomplete="off"></div>
+	</div>
 
 </body>
 </html>
