funcao trigger js

--- a/conversa.html
+++ b/conversa.html
@@ -28,5 +28,11 @@
 		<div><input id="input" type="text" placeholder="Diga alguma coisa..." autocomplete="off"></div>
 	</div>
 
+	<script type="text/javascript"></script>
+	var trigger = [
+		["Oi","Ola","Alo"],
+		
+	];
+
 </body>
 </html>
