--- a/conversa.html
+++ b/conversa.html
@@ -31,7 +31,9 @@
 	<script type="text/javascript"></script>
 	var trigger = [
 		["Oi","Ola","Alo"],
+		["como esta","como vai a vida","como vao as coisas"],
 		
+
 	];
 
 </body>
