criacao de var trigger

--- a/conversa.html
+++ b/conversa.html
@@ -28,13 +28,25 @@
 		<div><input id="input" type="text" placeholder="Diga alguma coisa..." autocomplete="off"></div>
 	</div>
 
-	<script type="text/javascript"></script>
-	var trigger = [
-		["Oi","Ola","Alo"],
-		["como esta","como vai a vida","como vao as coisas"],
-		
+	<script type="text/javascript">var trigger = [
+["oi", "ei", "olá"],
+["como você está", "como é a vida", "como estão as coisas"],
+["o que você está fazendo", "o que está acontecendo"],
+["Quantos anos você tem"],
+["quem é você", "você é humano", "você está bot", "você é humano ou bot"?]
+["quem te criou", "quem te fez"],
+["seu nome, por favor", "seu nome", "eu posso saber seu nome", "qual é o seu nome"],
+["eu te amo"],
+["feliz", "bom"],
+["mau", "normal", "cansado"],
+["ajude-me", "diga-me história", "conta-me uma piada"],
+["ah", "sim", "ok", "ok", "legal", "obrigado", "obrigado"],
+["adeus", "adeus", "adeus", "vejo voce mais tarde"]
+];
 
-	];
+	var reply = ["Oi", "Qual a cena?",]
+</script>
+	
 
 </body>
 </html>
