--- a/conversa.html
+++ b/conversa.html
@@ -41,10 +41,24 @@
 ["mau", "normal", "cansado"],
 ["ajude-me", "diga-me história", "conta-me uma piada"],
 ["ah", "sim", "ok", "ok", "legal", "obrigado", "obrigado"],
-["adeus", "adeus", "adeus", "vejo voce mais tarde"]
+["Adeus", "Adeus", "Ja vou", "vejo voce mais tarde"]
 ];
 
-	var reply = ["Oi", "Qual a cena?",]
+	var reply = [
+["Olá", "Ei", "Olá"],
+["Bem", "Muito bem", "Fantastico"],
+["Nada demais", "Sobre a ir dormir", "Você pode convidar?", "Eu não sei realmente"],
+["Tenho 1 dia de idade"],
+["Eu sou apenas um Robbo", "Eu sou um Robbo. O que você está fazer?"]
+["Kani Veri", "Meu Deus"],
+["Eu sou sem nome", "Eu não tenho um nome"],
+["Eu também te amo", "Eu também"],
+["Você já se sentiu mal?", "Fico feliz em ouvi-lo"],
+["Porque?", "Porque? Voce nao deveria!", "Tente ver TV"],
+["Eu vou", "E quanto?"]
+["Conta-me uma história", "Conta-me uma piada", "Fale-me sobre você", "Você é bem-vindo"],
+["Tchau", "Adeu", "Nos vemos mais tarde"]
+];
 </script>
 	
 
