criacao da variavel alternative

--- a/conversa.html
+++ b/conversa.html
@@ -59,6 +59,9 @@
 ["Conta-me uma história", "Conta-me uma piada", "Fale-me sobre você", "Você é bem-vindo"],
 ["Tchau", "Adeu", "Nos vemos mais tarde"]
 ];
+
+var alternative = ["Hahahaha...", "Awena...pfula matilho"];
+document.querySelector
 </script>
 	
 
