acrescimo de virgulas

--- a/conversa.html
+++ b/conversa.html
@@ -39,7 +39,7 @@
 			["como você está", "como é a vida", "como estão as coisas"],
 			["o que você está fazendo", "o que está acontecendo"],
 			["Quantos anos você tem"],
-			["quem é você", "você é humano", "você está bot", "você é humano ou bot"?]
+			["quem é você", "você é humano", "você está bot", "você é humano ou bot"],
 			["quem te criou", "quem te fez"],
 			["seu nome, por favor", "seu nome", "eu posso saber seu nome", "qual é o seu nome"],
 			["eu te amo"],
@@ -55,13 +55,13 @@
 			["Bem", "Muito bem", "Fantastico"],
 			["Nada demais", "Sobre a ir dormir", "Você pode convidar?", "Eu não sei realmente"],
 			["Tenho 1 dia de idade"],
-			["Eu sou apenas um Robbo", "Eu sou um Robbo. O que você está fazer?"]
+			["Eu sou apenas um Robbo", "Eu sou um Robbo. O que você está fazer?"],
 			["Kani Veri", "Meu Deus"],
 			["Eu sou sem nome", "Eu não tenho um nome"],
 			["Eu também te amo", "Eu também"],
 			["Você já se sentiu mal?", "Fico feliz em ouvi-lo"],
 			["Porque?", "Porque? Voce nao deveria!", "Tente ver TV"],
-			["Eu vou", "E quanto?"]
+			["Eu vou", "E quanto?"],
 			["Conta-me uma história", "Conta-me uma piada", "Fale-me sobre você", "Você é bem-vindo"],
 			["Tchau", "Adeu", "Nos vemos mais tarde"]
 			];
